Fix canvas being wider than screen and thus scrollbars from appearing

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -7,3 +7,7 @@ canvas{
     font-family: 'Minecraft';
     background-image: url("../images/nebula-bg.jpg");
 }
+
+body {
+    overflow: hidden;
+}
